--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>Document</title>
+		<title>Villa Agency - Real Estate</title>
 	</head>
-	<body></body>
+	<body>
+		info@company.com Sunny Isles Beach, FL 33160 Villa Home Properties Property DeTails Contact Us Schedule a
+		visit Toronto, Canada Hurry! Get the best villa for you Featured Best Apartment & Sea View Useful links
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+		cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio illum.
+		Sequi? How does this work? Why is Villa the best? 250 m2 Total space Contract Contract ready Payment Payment
+		process Safety 24/7 monitoring Video view Get a closer look & Different feeling 34 Completed Buildings 12
+		Years Experience 24 Awards won Best Deal Find Your BEst Deal Right Now! Apartment Villa Penthouse Total Flat
+		space 185 m2 Floor number 26th Numbers of rooms 4 Parking available Yes Payment Process Bank Additional
+		details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore
+		et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, do
+		eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Schedule a visit
+		We Provide the most sought after Properties Luxury Villa$2.264.000 18 New Street Miami, OR 97219 Bedrooms: 8
+		Bathrooms: 8 Area: 545m2 Floor: 3 Parking: 6 spots
+	</body>
 </html>
