Finished adding text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, do
 		eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Schedule a visit
 		We Provide the most sought after Properties Luxury Villa$2.264.000 18 New Street Miami, OR 97219 Bedrooms: 8
-		Bathrooms: 8 Area: 545m2 Floor: 3 Parking: 6 spots
+		Bathrooms: 8 Area: 545m2 Floor: 3 Parking: 6 spots Contact us Get In Touch With Our Agents place maap here
+		place foorm here Full Namme Email Adddress Subbject Messagee Send Messagee buttton phone icon 000-000-0000
+		email icon info@villa.com copyright line
 	</body>
 </html>
