Text completed, markup begun

--- a/index.html
+++ b/index.html
@@ -12,21 +12,130 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Villa Agency - Real Estate</title>
 	</head>
+
 	<body>
-		info@company.com Sunny Isles Beach, FL 33160 Villa Home Properties Property DeTails Contact Us Schedule a
-		visit Toronto, Canada Hurry! Get the best villa for you Featured Best Apartment & Sea View Useful links
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
-		cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio illum.
-		Sequi? How does this work? Why is Villa the best? 250 m2 Total space Contract Contract ready Payment Payment
-		process Safety 24/7 monitoring Video view Get a closer look & Different feeling 34 Completed Buildings 12
-		Years Experience 24 Awards won Best Deal Find Your BEst Deal Right Now! Apartment Villa Penthouse Total Flat
-		space 185 m2 Floor number 26th Numbers of rooms 4 Parking available Yes Payment Process Bank Additional
-		details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore
-		et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet, consectetur adipiscing elit, do
-		eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Schedule a visit
-		We Provide the most sought after Properties Luxury Villa$2.264.000 18 New Street Miami, OR 97219 Bedrooms: 8
-		Bathrooms: 8 Area: 545m2 Floor: 3 Parking: 6 spots Contact us Get In Touch With Our Agents place maap here
-		place foorm here Full Namme Email Adddress Subbject Messagee Send Messagee buttton phone icon 000-000-0000
-		email icon info@villa.com copyright line
+		<div class="subheader">
+			<ul>
+				<li><img src="images/email-icon.png" />info@company.com</li>
+				<li><i class="fa-solid fa-map"></i>Sunny Isles Beach, FL 33160</li>
+			</ul>
+
+			<img src="images/" />
+			<p></p>
+			<img />
+			<img />
+			<img />
+			<img />
+		</div>
+
+		<header>
+			<nav>
+				<ul>
+					<li>Villa</li>
+				</ul>
+				<ul>
+					<li>Home</li>
+					<li>Properties</li>
+					<li>Property Details</li>
+					<li>Contact Us</li>
+					<li>Schedule a visit</li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<section class="hero">
+				<span>Toronto, Canada</span>
+				<h1>Hurry!<br />Get the best villa for you</h1>
+			</section>
+
+			<section class="featured">
+				<img />
+				<h6>|Featured</h6>
+				<h2>Best Apartment & Sea View</h2>
+				<button>Useful links</button>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+				</p>
+				<button>How does this work?</button>
+				<p>
+					Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio
+					illum. Sequi?
+				</p>
+				<button>Why is Villa the best?</button>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+				</p>
+				<aside>
+					<p>250 m2 Total space Contract Contract ready Payment Payment process Safety 24/7 monitoring</p>
+				</aside>
+			</section>
+			<section>
+				<img />
+				<h6>|Video View</h6>
+				<h2>Get a closer look & Different feeling</h2>
+				<div>34 Completed Buildings 12 Years Experience 24 Awards won</div>
+			</section>
+
+			<section>
+				<h6>|Best Deal</h6>
+				<h2>Find Your Best Deal Right Now!</h2>
+				<button>Apartment</button>
+				<button>Villa</button>
+				<button>Penthouse</button>
+				<aside>
+					Total Flat space 185 m2 Floor number 26th Numbers of rooms 4 Parking available Yes Payment Process Bank
+				</aside>
+				<img />
+				<div>
+					Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
+					incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet,
+					consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised
+					ipsum suspendisse.
+					<button>Schedule a visit</button>
+				</div>
+			</section>
+			<section>
+				<h2>|Properties</h2>
+				<h2>We Provide the most sought after Properties</h2>
+				<div>Property cards</div>
+				<div>
+					Luxury Villa$2.264.000 18 New Street Miami, OR 97219 Bedrooms: 8 Bathrooms: 8 Area: 545m2 Floor: 3
+					Parking: 6
+					<button>Schedule a visit</button>
+				</div>
+			</section>
+			<section>
+				<h6>|Contact us</h6>
+				<h2>Get In Touch With Our Agents</h2>
+				<map></map>
+				<div>phone icon 000-000-0000 email icon info@villa.com</div>
+				<form>place foorm here Full Namme Email Adddress Subbject Messagee <button>Send Message</button></form>
+			</section>
+		</main>
+		<footer>
+			<div>Villa</div>
+			<img />
+			<img />
+			<img />
+			<p>Copyright 2024 VIlla Inc. All rights reserved.</p>
+			<div>
+				<p>Contact us</p>
+				<p>Sunny Isles Beach, FL 33160</p>
+				<p>000-000-0000</p>
+				<p>info@villa.Com</p>
+			</div>
+			<div>
+				<p>Company</p>
+				<p>About</p>
+				<p>000-000-0000</p>
+				<p>Careers</p>
+			</div>
+			<div>
+				<p>Resources</p>
+				<p>Directory</p>
+				<p>FAQs</p>
+				<p>Privacy & Terms</p>
+			</div>
+		</footer>
 	</body>
 </html>
