Beginning sub nav styling

--- a/index.html
+++ b/index.html
@@ -9,40 +9,56 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
 		<link rel="stylesheet" href="style.css" />
 		<title>Villa Agency - Real Estate</title>
 	</head>
 
 	<body>
-		<div class="subheader">
-			<ul>
-				<li><img src="images/email-icon.png" />info@company.com</li>
-				<li><i class="fa-solid fa-map"></i>Sunny Isles Beach, FL 33160</li>
-			</ul>
+		<header class="subheader container">
+			<div class="subheader__container flex">
+				<div>
+					<ul class="flex">
+						<li class="li__email"><i class="fa fa-envelope"></i>info@company.com</li>
+						<li class="li__map"><i class="fa fa-map"></i>Sunny Isles Beach, FL 33160</li>
+					</ul>
+				</div>
+				<div>
+					<ul class="flex">
+						<li>
+							<a href="#"><i class="fa-brands fa-facebook"></i></a>
+						</li>
+						<li>
+							<a href="#"><i class="fa-brands fa-twitter"></i></a>
+						</li>
+						<li>
+							<a href="#"><i class="fa-brands fa-linkedin"></i></a>
+						</li>
+						<li>
+							<a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
 
-			<img src="images/" />
-			<p></p>
-			<img />
-			<img />
-			<img />
-			<img />
-		</div>
-
-		<header>
-			<nav>
-				<ul>
-					<li>Villa</li>
-				</ul>
-				<ul>
-					<li>Home</li>
-					<li>Properties</li>
-					<li>Property Details</li>
-					<li>Contact Us</li>
-					<li>Schedule a visit</li>
-				</ul>
+			<nav class="main__nav flex">
+				<div>
+					<ul>
+						<li>Villa</li>
+					</ul>
+				</div>
+				<div>
+					<ul class="flex">
+						<li>Home</li>
+						<li>Properties</li>
+						<li>Property Details</li>
+						<li>Contact Us</li>
+						<li><i class="fa-solid fa-calendar"></i>Schedule a visit</li>
+					</ul>
+				</div>
 			</nav>
 		</header>
-		<main>
+		<main class="container">
 			<section class="hero">
 				<span>Toronto, Canada</span>
 				<h1>Hurry!<br />Get the best villa for you</h1>
