--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<li>Property Details</li>
 						<li>Contact Us</li>
 						<li>
-							<button href="#" class="schedule__button"><i class="fa fa-calendar"></i>Schedule a visit</button>
+							<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 						</li>
 					</ul>
 				</div>
@@ -76,18 +76,18 @@
 
 			<section class="featured container">
 				<img src="images/featured.jpg" />
-				<h6>|Featured</h6>
+				<h6>| Featured</h6>
 				<h2>Best Apartment & Sea View</h2>
-				<button>Useful links</button>
+				<button class="btn__general">Useful links</button>
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
 				</p>
-				<button>How does this work?</button>
+				<button class="btn__general">How does this work?</button>
 				<p>
 					Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio
 					illum. Sequi?
 				</p>
-				<button>Why is Villa the best?</button>
+				<button class="btn__general">Why is Villa the best?</button>
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
 				</p>
@@ -96,19 +96,19 @@
 				</aside>
 			</section>
 			<section class="container">
-				<h6>|Video View</h6>
+				<h6>| Video View</h6>
 				<img src="images/video-frame.jpg" />
 				<h2>Get a closer look & Different feeling</h2>
 				<div>34 Completed Buildings 12 Years Experience 24 Awards won</div>
 			</section>
 
-			<section class="container">
-				<h6>|Best Deal</h6>
+			<section class="best__deal container">
+				<h6>| Best Deal</h6>
 				<h2>Find Your Best Deal Right Now!</h2>
 				<div class="flex">
-					<button class="btn__style">Apartment</button>
-					<button class="btn__style">Villa</button>
-					<button class="btn__style">Penthouse</button>
+					<button class="btn__general">Apartment</button>
+					<button class="btn__general">Villa</button>
+					<button class="btn__general">Penthouse</button>
 				</div>
 				<aside class="info__table">
 					<ul>
@@ -119,59 +119,94 @@
 						<li>Payment Process <span>Bank</span></li>
 					</ul>
 				</aside>
-				<img />
+				<img src="images/deal-02.jpg" />
 				<div>
-					Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
-					incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet,
-					consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised
-					ipsum suspendisse.
-					<button class="btn__style">Schedule a visit</button>
+					<h4>Additional details</h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et
+						dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet.
+					</p>
+					<p>
+						Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
+						incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet,
+						consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised
+						ipsum suspendisse.
+					</p>
+					<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 				</div>
 			</section>
 			<section class="container">
-				<h2>|Properties</h2>
+				<h6>| Properties</h6>
 				<h2>We Provide the most sought after Properties</h2>
 				<div>Property cards</div>
 				<div>
 					Luxury Villa$2.264.000 18 New Street Miami, OR 97219 Bedrooms: 8 Bathrooms: 8 Area: 545m2 Floor: 3
 					Parking: 6
-					<button class="btn__style">Schedule a visit</button>
+					<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 				</div>
 			</section>
-			<section class="container">
-				<h6>|Contact us</h6>
+			<section class="contact-content container">
+				<h6>| Contact us</h6>
 				<h2>Get In Touch With Our Agents</h2>
 				<map></map>
 				<div>phone icon 000-000-0000 email icon info@villa.com</div>
-				<form>
-					place foorm here Full Namme Email Adddress Subbject Messagee
-					<button class="btn__style">Send Message</button>
+				<form id="contact-form" action="" method="post">
+					<fieldset>
+						<label for="name">Full Name</label>
+						<input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required />
+					</fieldset>
+
+					<fieldset>
+						<label for="email">Email Address</label>
+						<input
+							type="text"
+							name="email"
+							id="email"
+							pattern="[^ @]*@[^ @]*"
+							placeholder="Your E-mail..."
+							required=""
+						/>
+					</fieldset>
+
+					<fieldset>
+						<label for="subject">Subject</label>
+						<input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" />
+					</fieldset>
+
+					<fieldset>
+						<label for="message">Message</label>
+						<textarea name="message" id="message" placeholder="Your Message"></textarea>
+					</fieldset>
+					<button class="btn__general">Send Message</button>
 				</form>
 			</section>
 		</main>
-		<footer class="container">
-			<div>Villa</div>
-			<img />
-			<img />
-			<img />
-			<p>Copyright 2024 VIlla Inc. All rights reserved.</p>
-			<div>
-				<p>Contact us</p>
-				<p>Sunny Isles Beach, FL 33160</p>
-				<p>000-000-0000</p>
-				<p>info@villa.Com</p>
-			</div>
-			<div>
-				<p>Company</p>
-				<p>About</p>
-				<p>000-000-0000</p>
-				<p>Careers</p>
-			</div>
-			<div>
-				<p>Resources</p>
-				<p>Directory</p>
-				<p>FAQs</p>
-				<p>Privacy & Terms</p>
+
+		<footer class="footer__section">
+			<div class="container">
+				<div>Villa</div>
+				<img />
+				<img />
+				<img />
+				<p>Copyright 2024 Villa Inc. All rights reserved.</p>
+				<ul>
+					<li class="footer-subhead">Contact us</li>
+					<li>Sunny Isles Beach, FL 33160</li>
+					<li>000-000-0000</li>
+					<li>info@villa.Com</li>
+				</ul>
+				<ul>
+					<li class="footer-subhead">Company</li>
+					<li>About</li>
+					<li>000-000-0000</li>
+					<li>Careers</li>
+				</ul>
+				<ul>
+					<li class="footer-subhead">Resources</li>
+					<li>Directory</li>
+					<li>FAQs</li>
+					<li>Privacy & Terms</li>
+				</ul>
 			</div>
 		</footer>
 	</body>
