Adding map to contacts

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 					<p>250 m2 Total space Contract Contract ready Payment Payment process Safety 24/7 monitoring</p>
 				</aside>
 			</section>
+
 			<section class="container">
 				<h6>| Video View</h6>
 				<img src="images/video-frame.jpg" />
@@ -135,6 +136,7 @@
 					<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 				</div>
 			</section>
+
 			<section class="container">
 				<h6>| Properties</h6>
 				<h2>We Provide the most sought after Properties</h2>
@@ -145,12 +147,34 @@
 					<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 				</div>
 			</section>
+
 			<section class="contact-content container">
 				<h6>| Contact us</h6>
 				<h2>Get In Touch With Our Agents</h2>
-				<map></map>
-				<div>phone icon 000-000-0000 email icon info@villa.com</div>
-				<form id="contact-form" action="" method="post">
+				<div class="google-map">
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14351.107544843828!2d-80.13252263928365!3d25.942549735816613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ace0f4fb6051%3A0x83ad83c3f213ec3a!2sSunny%20Isles%20Beach%20Government%20Center!5e0!3m2!1sen!2sus!4v1710168744928!5m2!1sen!2sus"
+						width="600"
+						height="450"
+						style="border: 0"
+						allowfullscreen=""
+						loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"
+					></iframe>
+				</div>
+				<div class="icon-container flex">
+					<div class="item phone flex">
+						<img src="images/phone-icon.png" />
+						<h4>000-000-0000</h4>
+					</div>
+
+					<div class="item email flex">
+						<img src="images/email-icon.png" />
+						<h4>info@villa.com</h4>
+					</div>
+				</div>
+
+				<form class="flex" id="contact-form" action="" method="post">
 					<fieldset>
 						<label for="name">Full Name</label>
 						<input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required />
@@ -183,31 +207,26 @@
 		</main>
 
 		<footer class="footer__section">
-			<div class="container">
-				<div>Villa</div>
-				<img />
-				<img />
-				<img />
-				<p>Copyright 2024 Villa Inc. All rights reserved.</p>
-				<ul>
-					<li class="footer-subhead">Contact us</li>
-					<li>Sunny Isles Beach, FL 33160</li>
-					<li>000-000-0000</li>
-					<li>info@villa.Com</li>
-				</ul>
-				<ul>
-					<li class="footer-subhead">Company</li>
-					<li>About</li>
-					<li>000-000-0000</li>
-					<li>Careers</li>
-				</ul>
-				<ul>
-					<li class="footer-subhead">Resources</li>
-					<li>Directory</li>
-					<li>FAQs</li>
-					<li>Privacy & Terms</li>
-				</ul>
-			</div>
+			<div class="comp-logo">Villa</div>
+			<ul>
+				<li class="footer-subhead">Contact us</li>
+				<li>Sunny Isles Beach, FL 33160</li>
+				<li>000-000-0000</li>
+				<li>info@villa.com</li>
+			</ul>
+			<ul>
+				<li class="footer-subhead">Company</li>
+				<li>About</li>
+				<li>000-000-0000</li>
+				<li>Careers</li>
+			</ul>
+			<ul>
+				<li class="footer-subhead">Resources</li>
+				<li>Directory</li>
+				<li>FAQs</li>
+				<li>Privacy & Terms</li>
+			</ul>
+			<p>Copyright 2024 Villa Inc. <br />All rights reserved.</p>
 		</footer>
 	</body>
 </html>
