--- a/index.html
+++ b/index.html
@@ -143,9 +143,12 @@
 				<div class="property__cards">
 					<div class="card">
 						<img src="images/property-01.jpg" />
-						<div class="card__flag">Luxury Villa</div>
-						<h6 class="card__price">$2.264.000></h6>
-						<div class="card__title">18 New Street Miami, OR 97219</div>
+						<div class="card__header flex">
+							<span class="card__flag">Luxury Villa</span>
+							<h6 class="card__price">$2.264.000</h6>
+						</div>
+
+						<h4 class="card__title">18 New Street Miami, OR 97219</h4>
 						<div class="card__description">Bedrooms: 8 Bathrooms: 8 Area: 545m2 Floor: 3 Parking: 6</div>
 						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 					</div>
