Starting video section

--- a/index.html
+++ b/index.html
@@ -103,37 +103,39 @@
 				<div>34 Completed Buildings 12 Years Experience 24 Awards won</div>
 			</section>
 
-			<section class="best__deal container">
-				<h6>| Best Deal</h6>
-				<h2>Find Your Best Deal Right Now!</h2>
-				<div class="flex">
-					<button class="btn__general">Apartment</button>
-					<button class="btn__general">Villa</button>
-					<button class="btn__general">Penthouse</button>
-				</div>
-				<aside class="info__table">
-					<ul>
-						<li>Total Flat Space <span>185 m2</span></li>
-						<li>Floor number <span>26th</span></li>
-						<li>Number of rooms <span>4</span></li>
-						<li>Parking Available <span>Yes</span></li>
-						<li>Payment Process <span>Bank</span></li>
-					</ul>
-				</aside>
-				<img src="images/deal-02.jpg" />
-				<div>
-					<h4>Additional details</h4>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et
-						dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet.
-					</p>
-					<p>
-						Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
-						incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised
-						ipsum suspendisse.
-					</p>
-					<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+			<section class="best__deal">
+				<div class="container">
+					<h6>| Best Deal</h6>
+					<h2>Find Your Best Deal Right Now!</h2>
+					<div class="flex">
+						<button class="btn__general">Apartment</button>
+						<button class="btn__general">Villa</button>
+						<button class="btn__general">Penthouse</button>
+					</div>
+					<aside class="info__table">
+						<ul>
+							<li>Total Flat Space <span>185 m2</span></li>
+							<li>Floor number <span>26th</span></li>
+							<li>Number of rooms <span>4</span></li>
+							<li>Parking Available <span>Yes</span></li>
+							<li>Payment Process <span>Bank</span></li>
+						</ul>
+					</aside>
+					<img src="images/deal-02.jpg" />
+					<div>
+						<h4>Additional details</h4>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et
+							dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet.
+						</p>
+						<p>
+							Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
+							incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet,
+							consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised
+							ipsum suspendisse.
+						</p>
+						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+					</div>
 				</div>
 			</section>
 
@@ -141,15 +143,93 @@
 				<h6>| Properties</h6>
 				<h2>We Provide the most sought after Properties</h2>
 				<div class="property__cards">
-					<div class="card">
+					<div class="card flex">
 						<img src="images/property-01.jpg" />
 						<div class="card__header flex">
 							<span class="card__flag">Luxury Villa</span>
 							<h6 class="card__price">$2.264.000</h6>
 						</div>
 
-						<h4 class="card__title">18 New Street Miami, OR 97219</h4>
-						<div class="card__description">Bedrooms: 8 Bathrooms: 8 Area: 545m2 Floor: 3 Parking: 6</div>
+						<h4 class="card__title">18 New Street Miami, FL 97219</h4>
+						<div class="card__description">
+							Bedrooms: <span>8</span> Bathrooms: <span>8</span> Area: <span>545m2</span> Floor:
+							<span>3</span> Parking: <span>6</span>
+						</div>
+						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+					</div>
+
+					<div class="card flex">
+						<img src="images/property-02.jpg" />
+						<div class="card__header flex">
+							<span class="card__flag">Luxury Villa</span>
+							<h6 class="card__price">$1.180.000</h6>
+						</div>
+
+						<h4 class="card__title">54 Mid Street Miami, FL 97219</h4>
+						<div class="card__description">
+							Bedrooms: <span>6</span> Bathrooms: <span>5</span> Area: <span>450m2</span> Floor:
+							<span>3</span> Parking: <span>8</span>
+						</div>
+						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+					</div>
+
+					<div class="card flex">
+						<img src="images/property-03.jpg" />
+						<div class="card__header flex">
+							<span class="card__flag">Luxury Villa</span>
+							<h6 class="card__price">$1.460.000</h6>
+						</div>
+
+						<h4 class="card__title">26 Old Street Miami, FL 97219</h4>
+						<div class="card__description">
+							Bedrooms: <span>5</span> Bathrooms: <span>4</span> Area: <span>225m2</span> Floor:
+							<span>3</span> Parking: <span>10</span>
+						</div>
+						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+					</div>
+
+					<div class="card flex">
+						<img src="images/property-04.jpg" />
+						<div class="card__header flex">
+							<span class="card__flag">Apartment</span>
+							<h6 class="card__price">$584.500</h6>
+						</div>
+
+						<h4 class="card__title">12 New Street Miami, FL 97219</h4>
+						<div class="card__description">
+							Bedrooms: <span>4</span> Bathrooms: <span>3</span> Area: <span>125m2</span> Floor:
+							<span>25</span> Parking: <span>2</span>
+						</div>
+						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+					</div>
+
+					<div class="card flex">
+						<img src="images/property-05.jpg" />
+						<div class="card__header flex">
+							<span class="card__flag">Penthouse</span>
+							<h6 class="card__price">$925.600</h6>
+						</div>
+
+						<h4 class="card__title">34 Beach Street Miami, FL 97219</h4>
+						<div class="card__description">
+							Bedrooms: <span>4</span> Bathrooms: <span>4</span> Area: <span>180m2</span> Floor:
+							<span>38</span> Parking: <span>2</span>
+						</div>
+						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+					</div>
+
+					<div class="card flex">
+						<img src="images/property-06.jpg" />
+						<div class="card__header flex">
+							<span class="card__flag">Modern Condo</span>
+							<h6 class="card__price">$450.000</h6>
+						</div>
+
+						<h4 class="card__title">22 New Street Portland, OR 16540</h4>
+						<div class="card__description">
+							Bedrooms: <span>4</span> Bathrooms: <span>4</span> Area: <span>180m2</span> Floor:
+							<span>38</span> Parking: <span>2</span>
+						</div>
 						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 					</div>
 				</div>
