Video section done

--- a/index.html
+++ b/index.html
@@ -96,11 +96,32 @@
 				</aside>
 			</section>
 
-			<section class="container">
-				<h6>| Video View</h6>
-				<img src="images/video-frame.jpg" />
-				<h2>Get a closer look & Different feeling</h2>
-				<div>34 Completed Buildings 12 Years Experience 24 Awards won</div>
+			<section class="video__section">
+				<div class="image-container flex">
+					<h6>| Video View</h6>
+					<h2>Get a Closer Look & Different Feeling</h2>
+					<div class="video-frame">
+						<img src="images/video-frame.jpg" />
+						<a href="https://youtube.com" target="_blank"><i class="fa fa-play"></i></a>
+					</div>
+				</div>
+
+				<div class="container">
+					<div class="facts__container">
+						<div class="fact flex">
+							<span class="flex">34</span>
+							<h8>Completed Buildings</h8>
+						</div>
+						<div class="fact flex">
+							<span class="flex">12</span>
+							<h8>Years Experience</h8>
+						</div>
+						<div class="fact flex">
+							<span class="flex">24</span>
+							<h8>Awards Won</h8>
+						</div>
+					</div>
+				</div>
 			</section>
 
 			<section class="best__deal">
