Added new preview image

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<h2>Get a Closer Look & Different Feeling</h2>
 					<div class="video-frame">
 						<img src="images/video-frame.jpg" />
-						<a href="https://youtube.com" target="_blank"><i class="fa fa-play"></i></a>
+						<a href="https://www.youtube.com/watch?v=-lUv-Mt2QD4" target="_blank"><i class="fa fa-play"></i></a>
 					</div>
 				</div>
 
