Starting Featured styles

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 			</section>
 
 			<section class="featured container">
-				<img src="images/featured.jpg" />
 				<h6>| Featured</h6>
-				<h2>Best Apartment & Sea View</h2>
+				<h2>Best Apartment & Ocean View</h2>
+				<img src="images/featured.jpg" />
 				<button class="btn__general">Useful links</button>
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
