featured icons added

--- a/index.html
+++ b/index.html
@@ -91,8 +91,17 @@
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
 				</p>
-				<aside>
-					<p>250 m2 Total space Contract Contract ready Payment Payment process Safety 24/7 monitoring</p>
+				<aside class="featured__table">
+					<img src="images/info-icon-01.png" />
+					<img src="images/info-icon-02.png" />
+					<img src="images/info-icon-03.png" />
+					<img src="images/info-icon-04.png" />
+					<ul>
+						<li><span>250 m2</span>Total Flat Space</li>
+						<li><span>Contract</span>Contract ready</li>
+						<li><span>Payment</span>Payment Process</li>
+						<li><span>Safety</span>24/7 Security monitoring</li>
+					</ul>
 				</aside>
 			</section>
 
