--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 			<section class="featured container">
 				<h6>| Featured</h6>
 				<h2>Best Apartment & Ocean View</h2>
-				<img src="images/featured.jpg" />
+				<img class="feature-image" src="images/featured.jpg" />
+
+				<div class="feature-icon flex"><img src="images/featured-icon.png" /></div>
+
 				<button class="btn__general">Useful links</button>
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
@@ -91,17 +94,37 @@
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
 				</p>
-				<aside class="featured__table">
-					<img src="images/info-icon-01.png" />
-					<img src="images/info-icon-02.png" />
-					<img src="images/info-icon-03.png" />
-					<img src="images/info-icon-04.png" />
-					<ul>
-						<li><span>250 m2</span>Total Flat Space</li>
-						<li><span>Contract</span>Contract ready</li>
-						<li><span>Payment</span>Payment Process</li>
-						<li><span>Safety</span>24/7 Security monitoring</li>
-					</ul>
+				<aside>
+					<div class="featured__container">
+						<div class="feature flex">
+							<img src="images/info-icon-01.png" />
+							<div>
+								<span class="flex">250 m2</span>
+								<h8>Total Flat Space</h8>
+							</div>
+						</div>
+						<div class="feature flex">
+							<img src="images/info-icon-02.png" />
+							<div>
+								<span class="flex">Contract</span>
+								<h8>Contract ready</h8>
+							</div>
+						</div>
+						<div class="feature flex">
+							<img src="images/info-icon-03.png" />
+							<div>
+								<span class="flex">Payment</span>
+								<h8>Payment Process</h8>
+							</div>
+						</div>
+						<div class="feature flex">
+							<img src="images/info-icon-04.png" />
+							<div>
+								<span class="flex">Safety</span>
+								<h8>24/7 Security</h8>
+							</div>
+						</div>
+					</div>
 				</aside>
 			</section>
 
