Setting up mobile nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 
 	<body>
-		<header class="subheader container">
+		<header class="header">
 			<div class="subheader__container flex">
 				<div>
 					<ul class="flex">
@@ -68,9 +68,10 @@
 				</div>
 			</nav>
 		</header>
+
 		<main>
 			<section class="hero">
-				<span>Toronto, Canada</span>
+				<span>Toronto, <em>Canada</em></span>
 				<h1>Hurry!<br />Get the best villa for you</h1>
 			</section>
 
@@ -352,7 +353,7 @@
 		</main>
 
 		<footer class="footer__section">
-			<div class="comp-logo">Villa</div>
+			<div class="comp-logo-white">Villa</div>
 			<ul>
 				<li class="footer-subhead">Contact us</li>
 				<li>Sunny Isles Beach, FL 33160</li>
