Adding media queries

--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@
 				</div>
 			</div>
 
-			<nav class="main__nav flex">
-				<div>
+			<nav class="main__nav">
+				<div class="flex">
 					<a class="comp-logo" href="#">Villa</a>
 					<button class="nav-toggle" aria-label="open navigation">
 						<span class="hamburger"></span>
 					</button>
+					<nav class="nav--primary">
+						<ul class="nav__list flex">
+							<li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+							<li class="nav__item">Properties</li>
+							<li class="nav__item">Property Details</li>
+							<li class="nav__item">Contact Us</li>
+							<li>
+								<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+							</li>
+						</ul>
+					</nav>
 				</div>
-				<nav class="nav">
-					<ul class="nav__list flex">
-						<li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-						<li class="nav__item">Properties</li>
-						<li class="nav__item">Property Details</li>
-						<li class="nav__item">Contact Us</li>
-						<li>
-							<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
-						</li>
-					</ul>
-				</nav>
 			</nav>
 		</header>
 
