Starting media queries

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 					<nav class="nav--primary">
 						<ul class="nav__list flex">
 							<li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-							<li class="nav__item">Properties</li>
-							<li class="nav__item">Property Details</li>
-							<li class="nav__item">Contact Us</li>
+							<li class="nav__item"><a href="#" class="nav__link">Properties</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Property Details</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
 							<li>
 								<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 							</li>
@@ -159,7 +159,7 @@
 			</section>
 
 			<section class="best__deal">
-				<div class="container">
+				<div class="best-deal container">
 					<h6>| Best Deal</h6>
 					<h2>Find Your Best Deal Right Now!</h2>
 					<div class="flex">
